[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/Operators/Recruit/Skill/RecruitSkill.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="RecruitSkill" type="Spatial"]
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="BoostTime" type="Timer" parent="."]
one_shot = true

[node name="ReloadTime" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="BoostTime" to="." method="_on_BoostTime_timeout"]
